2005-03-17  Shan G. Smith  <shan@cybertrails.com>

	* configure.in: Move check for -lumfpack to after check for blas.

2005-03-17  John W. Eaton  <jwe@octave.org>

	* configure.in: If first check for -lumfpack fails try again with
	-lcblas as an additional library.

	* configure.in: Change defaults to enable shared libraries and
	dynamic linking and disable static libraries.

2005-03-15  John W. Eaton  <jwe@octave.org>

	* octMakefile.in (DISTFILES): Remove texi2dvi from the list.

	* emacs/octave-inf.el, emacs/octave-mod.el, emacs/octave-hlp.el:
	Import changes from Emacs.

2005-03-14  Rafael Laboissiere  <rafael@debian.org>

	* emacs/octave-mod.el (octave-end-keywords): Omit "end" from the list.
	(octave-reserved-words): Include "end" here.
	(octve-block-match-alist): Don't include "end" here.

2005-03-14  John W. Eaton  <jwe@octave.org>

	* configure.in: Check for umfpack/umfpack.h instead of just umfpack.h.

2004-06-22  David Bateman  <dbateman@free.org>

	* configure.in: Check for UMFPACK library and header files.

2005-03-14  John W. Eaton  <jwe@octave.org>

	* configure.in: Also print a warning if HDF5 library is not found.

2005-03-10  John W. Eaton  <jwe@octave.org>

	* mkoctfile.in: Accept -R DIR.

2005-03-09  John W. Eaton  <jwe@octave.org>

	* examples/Makefile.in (bin-dist): Delete target.
	(BINDISTFILES): Delete variable.
	* emacs/Makefile.in: Likewise.

	* octMakefile.in (VERSION, ARCH, binary-dist): Delete targets.
	(XBINDISTFILES, BINDISTFILES, BINDISTSUBDIRS): Delete variables.

2005-03-04  John W. Eaton  <jwe@octave.org>

	* configure.in (GXX_PICKY_FLAGS): Don't include
	-Wmissing-prototypes or -Wstrict-prototypes.

2005-03-02  John W. Eaton  <jwe@octave.org>

	* aclocal.m4 (OCTAVE_CC_FLAG, OCTAVE_CXX_FLAG, OCTAVE_F77_FLAG):
	Use AC_LINK_IFELSE instead of AC_TRY_LINK.

	* configure.in (OCTAVE_LOCAL_BUFFER): Use < T > instead of <T>.
	From Clinton Chee <chee@parallel.hpc.unsw.edu.au>.

2005-03-01  John W. Eaton  <jwe@octave.org>
