@@ -90,7 +90,30 @@ fi
 
 : ${EDITOR=$DEFEDITOR}
 
-: ${PAGER=more}
+if [ -z "$DEFPAGER" ] && [ -z "$PAGER" ]; then
+  if [ -x /usr/bin/pager ]; then
+    DEFPAGER=pager
+  elif [ -x /usr/bin/less ]; then
+    DEFPAGER=less
+  elif [ -x /usr/bin/less ]; then
+    DEFPAGER=less
+  elif [ -x /usr/local/bin/less ]; then
+    DEFPAGER=less
+  elif [ -x /usr/bin/more ]; then
+    DEFPAGER=more
+  elif [ -x /bin/more ]; then
+    DEFPAGER=more
+  elif [ -x /usr/bin/pg ]; then
+    DEFPAGER=pg
+  elif [ -x /bin/pg ]; then
+    DEFPAGER=pg
+  else
+    echo "octave-bug: No default pager found: attempting to use more" >&2
+    DEFPAGER=more
+  fi
+fi
+
+: ${PAGER=$DEFPAGER}
 
 trap 'rm -f $TEMP $TEMP.x; exit 1' 1 2 3 13 15
 trap 'rm -f $TEMP $TEMP.x' 0
